--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                   <a class="nav-link" href="Service.html">Services</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="Contact Us.html">Contact Us</a>
+                  <a class="nav-link" href="Contact.html">Contact Us</a>
                 </li>
               </ul>
             </div>
